--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,17 @@
 [tool.poetry]
 name = "constgen"
-version = "0.1.0"
+version = "0.2.0"
 description = "ConstGen lets you share multiple object definitions between multiple programming languages"
 authors = ["Jordan Cohen <yarden.mec@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/ymec/constgen.git"
 repository = "https://github.com/ymec/constgen.git"
+#packages = [
+#    { include = "constgen" } ,
+#    { include = "constgen/config/**/*.py" },
+#    { include = "constgen/generators" },
+#]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -20,4 +25,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-constgen = 'constgen:main'
+constgen = 'constgen.constgen:main'
